--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
+<!doctype html>
+<html lang="es">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>TPE Nº1 - Grupo 2 - Interfaces de Usuario e Interacción</title>
+<link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+<main class="card">
 <h1>Interfaces de Usuario e Interacción</h1>
+<h2>Grupo 2 - TUDAI 2024 - Tandil</h2>
+
+
+<div class="meta">
+<strong>Alumnos:</strong>
+<ul>
+<li>Luciano Oroquieta Merlino</li>
+<li>Luciano Arias</li>
+<li>Matias Gatti Gonzalez</li>
+</ul>
+</div>
+
+
+<div>
+<div class="section-title">Recursos Figma</div>
+<!-- Reemplazá los # por las URLs reales de Figma -->
+<a class="btn" href="#" target="_blank" rel="noopener">TPE Nº1 - Figma - Presentación</a>
+<a class="btn" href="#" target="_blank" rel="noopener">TPE Nº1 - Figma - Modo edición</a>
+</div>
+
+
+<footer>
+<div>TPE 1</div>
+<div>Universidad: ____________________</div>
+<div style="margin-top:6px">Grupo / Integrantes: ____________________</div>
+</footer>
+</main>
+</body>
+</html>
