--- a/index.html
+++ b/index.html
@@ -3,38 +3,33 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>TPE Nº1 - Grupo 2 - Interfaces de Usuario e Interacción</title>
+<title>TPE Nº1 - Grupo 18 - Interfaces de Usuario e Interacción </title>
 <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 <main class="card">
-<h1>Interfaces de Usuario e Interacción</h1>
-<h2>Grupo 2 - TUDAI 2024 - Tandil</h2>
+<h2> - TUDAI 2025 - Tandil</h2>
 
 
 <div class="meta">
 <strong>Alumnos:</strong>
 <ul>
-<li>Luciano Oroquieta Merlino</li>
-<li>Luciano Arias</li>
-<li>Matias Gatti Gonzalez</li>
+<li>Diaz, Valentin</li>
+<li>Gonzalez, Maia Abigail</li>
+<li>Saffarano, Tomas Alfredo</li>
 </ul>
 </div>
 
 
 <div>
-<div class="section-title">Recursos Figma</div>
+<div class="section-title">Links Figma</div>
 <!-- Reemplazá los # por las URLs reales de Figma -->
-<a class="btn" href="#" target="_blank" rel="noopener">TPE Nº1 - Figma - Presentación</a>
-<a class="btn" href="#" target="_blank" rel="noopener">TPE Nº1 - Figma - Modo edición</a>
+<a class="btn" href="https://www.figma.com/proto/WNF3rzb2MPsJ9uCrYlRuMf/TPE-Entrega-1-Grupo-18?node-id=27-187&p=f&t=8CCsoGRdGNQF5Laq-1&scaling=scale-down-width&content-scaling=fixed&page-id=1%3A4&starting-point-node-id=251%3A748" target="_blank" rel="noopener">TPE Nº1 - Figma - Presentación</a>
+<a class="btn" href="https://www.figma.com/design/WNF3rzb2MPsJ9uCrYlRuMf/TPE-Entrega-1-Grupo-18?node-id=0-1&t=D6kUlWrqt14DWv8f-1" target="_blank" rel="noopener">TPE Nº1 - Figma - Modo edición</a>
 </div>
 
 
-<footer>
-<div>TPE 1</div>
-<div>Universidad: ____________________</div>
-<div style="margin-top:6px">Grupo / Integrantes: ____________________</div>
-</footer>
+
 </main>
 </body>
 </html>
