--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!doctype html>
 <html lang="es">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>TPE Nº1 - Grupo 18 - Interfaces de Usuario e Interacción </title>
-<link rel="stylesheet" href="styles.css" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>TPE Nº1 - Grupo 7 - Interfaces de Usuario e Interacción</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-<main class="card">
-<h2> - TUDAI 2025 - Tandil</h2>
+  <main class="card">
+    <h2>Grupo 18 - TUDAI 2025 - Tandil</h2>
 
-
-<div class="meta">
-<strong>Alumnos:</strong>
-<ul>
-<li>Diaz, Valentin</li>
-<li>Gonzalez, Maia Abigail</li>
-<li>Saffarano, Tomas Alfredo</li>
-</ul>
-</div>
+    <div class="meta">
+      <strong>Alumnos:</strong>
+      <ul>
+        <li>Diaz, Valentin</li>
+        <li>Gonzalez, Maia Abigail</li>
+        <li>Saffarano, Tomas Alfredo</li>
+      </ul>
+    </div>
+  </main>
+</body>
+</html>
 
 
 <div>
