--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title></title>
+  <title>TPE Nº1 - Grupo 7 - Interfaces de Usuario e Interacción</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <main class="card">
-    <h2>TPE Nº1 - Grupo 7 - Interfaces de Usuario e Interacción - Tudai 2025 - Tandil</h2>
+    <h2>Grupo 18 - TUDAI 2025 - Tandil</h2>
 
     <div class="meta">
       <strong>Alumnos:</strong>
@@ -19,18 +19,5 @@
       </ul>
     </div>
   </main>
-</body>
-</html>
-
-
-<div>
-<div class="section-title">Links Figma</div>
-<a class="btn" href="https://www.figma.com/proto/WNF3rzb2MPsJ9uCrYlRuMf/TPE-Entrega-1-Grupo-18?node-id=27-187&p=f&t=8CCsoGRdGNQF5Laq-1&scaling=scale-down-width&content-scaling=fixed&page-id=1%3A4&starting-point-node-id=251%3A748" target="_blank" rel="noopener">TPE Nº1 - Figma - Presentación</a>
-<a class="btn" href="https://www.figma.com/design/WNF3rzb2MPsJ9uCrYlRuMf/TPE-Entrega-1-Grupo-18?node-id=0-1&t=D6kUlWrqt14DWv8f-1" target="_blank" rel="noopener">TPE Nº1 - Figma - Modo edición</a>
-</div>
-
-
-
-</main>
 </body>
 </html>
