--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </ul>
     </div>
         <div class="links">
-      <a class="btn" href="https://www.figma.com/proto/WNF3rzb2MPsJ9uCrYlRuMf/TPE-Entrega-1-Grupo-18?node-id=1-2&p=f&t=NCxWbmMsl1qvSlfR-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A2" target="_blank" rel="noopener">TPE Nº1 - Figma - Presentación</a>
+      <a class="btn" href="https://www.figma.com/proto/WNF3rzb2MPsJ9uCrYlRuMf/TPE-Entrega-1-Grupo-18?node-id=251-748&p=f&t=5ZFKxyqJQZGCATpn-1&scaling=min-zoom&content-scaling=fixed&page-id=1%3A4&starting-point-node-id=251%3A748" target="_blank" rel="noopener">TPE Nº1 - Figma - Presentación</a>
       <a class="btn" href="https://www.figma.com/design/WNF3rzb2MPsJ9uCrYlRuMf/TPE-Entrega-1-Grupo-18?node-id=0-1&t=PKhr1we962WIB7YN-1" target="_blank" rel="noopener">TPE Nº1 - Figma - Modo edición</a>
     </div>
   </main>
