--- a/Entrega2/4enlinea.html
+++ b/Entrega2/4enlinea.html
@@ -182,93 +182,124 @@
                   </div>
                 </div>
               </div>
-              <footer>
-                <div class="container-footer">
-                    <div class="sec aboutus">
-                        <h2>About Us</h2>
-                        <ul class="items">
-                            <li><a href="#">Quiénes somos</a></li>
-                            <li><a href="#">Historia de la empresa</a></li>
-                            <li><a href="#">Misión y visión</a></li>
-                            <li><a href="#">Contacto</a></li>
-                            <li><a href="#">Trabaja con nosotros</a></li>
-                        </ul>
-                        <ul class="social-links">
-                            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-                        </ul>
-                    </div>
-                    <div class="sec links">
-                        <h2>Legal</h2>
-                        <ul>
-                            <li><a href="#">Términos y condiciones</a></li>
-                            <li><a href="#">Políticas de privacidad</a></li>
-                            <li><a href="#">Políticas de cookies</a></li>
-                            <li><a href="#">Derechos de autor</a></li>
-                        </ul>
-                    </div>
-                    <div class="sec links">
-                        <h2>Soporte</h2>
-                        <ul>
-                            <li><a href="#">Centro de ayuda</a></li>
-                            <li><a href="#">Reembolso y devoluciones</a></li>
-                            <li><a href="#">Soporte técnico</a></li>
-                            <li><a href="#">Productos y servicios</a></li>
-                        </ul>
-                    </div>
-                    <div class="sec links">
-                        <h2>Recursos</h2>
-                        <ul>
-                            <li><a href="#">Descargas</a></li>
-                            <li><a href="#">Tutoriales</a></li>
-                            <li><a href="#">Foros</a></li>
-                            <li><a href="#">Webinars</a></li>
-                            <li><a href="#">API & Integraciones</a></li>
-                        </ul>
-                    </div>
-                    <div class="sec links">
-                        <h2>Enlaces Rapidos</h2>
-                        <ul>
-                            <li><a href="#">Preguntas Frecuentes (FAQ)</a></li>
-                            <li><a href="#">Términos y condiciones</a></li>
-                            <li><a href="#">Actualizaciones y parches</a></li>
-                            <li><a href="#">Descargas de juegos</a></li>
-                            <li><a href="#">Mapa del sitio</a></li>
-                            <li><a href="#">Soporte</a></li>
-                            <li><a href="#">Ayuda en línea</a></li>
-                            <li><a href="#">Manuales y guías</a></li>
-                            <li><a href="#">Políticas de devolución</a></li>
-                        </ul>
-                    </div>
-                    <div class="sec links">
-                        <h2>Comunidad</h2>
-                        <ul>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Noticias</a></li>
-                            <li><a href="#">Eventos</a></li>
-                            <li><a href="#">Foros de la comunidad</a></li>
-                            <li><a href="#">Eventos y torneos</a></li>
-                        </ul>
-                    </div>
-                    <div class="sec links">
-                        <h2>Servicios</h2>
-                        <ul>
-                            <li><a href="#">Catálogo</a></li>
-                            <li><a href="#">Precios</a></li>
-                            <li><a href="#">Promociones</a></li>
-                            <li><a href="#">Clientes</a></li>
-                            <li><a href="#">Opiniones de clientes</a></li>
-                            <li><a href="#">Empresas asociadas</a></li>
-                            <li><a href="#">Programas de fidelidad</a></li>
-                            <li><a href="#">Descuentos para clientes</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </footer>
-            <div class="Copyright">
-                <p>2024 Copyright GAMETIME. All Rights Reserved</p>
-            </div>
+          <footer class="footer">
+      <div class="footer-content">
+        <div class="footer-brand">
+          <div class="brand-icon">
+            <img src="assets/images/logo.png" alt="Game Time Logo" />
+          </div>
+          <p>
+            La plataforma de gaming más completa. Descubre, juega y conecta con
+            millones de jugadores en todo el mundo.
+          </p>
+          <div class="social-links">
+            <a href="#" aria-label="Instagram">
+              <svg
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="currentColor"
+              >
+                <path
+                  d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"
+                />
+              </svg>
+            </a>
+            <a href="#" aria-label="Twitter">
+              <svg
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="currentColor"
+              >
+                <path
+                  d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"
+                />
+              </svg>
+            </a>
+            <a href="#" aria-label="Email">
+              <svg
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="currentColor"
+              >
+                <path
+                  d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
+                />
+                <polyline
+                  points="22,6 12,13 2,6"
+                  stroke="#0a0a0a"
+                  stroke-width="2"
+                />
+              </svg>
+            </a>
+            <a href="#" aria-label="Facebook">
+              <svg
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="currentColor"
+              >
+                <path
+                  d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"
+                />
+              </svg>
+            </a>
+          </div>
+        </div>
+
+        <div class="footer-column">
+          <h3>Soporte y comunidad</h3>
+          <ul>
+            <li><a href="#">Centro de ayuda</a></li>
+            <li><a href="#">Reembolso y devoluciones</a></li>
+            <li><a href="#">foro de comunidades</a></li>
+            <li><a href="#">eventos y torneos</a></li>
+            <li><a href="#">productos y servicios</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-column">
+          <h3>Enlaces Rápidos</h3>
+          <ul>
+            <li><a href="#">Preguntas Frecuentes (FAQ)</a></li>
+            <li><a href="#">Términos y condiciones</a></li>
+            <li><a href="#">Actualizaciones y parches</a></li>
+            <li><a href="#">Descargas de juegos Mapa del sitio</a></li>
+            <li><a href="#">Ayuda en línea</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-column">
+          <h3>NewsLetters</h3>
+          <p style="color: #888; font-size: 14px; margin-bottom: 15px">
+            Suscríbete para recibir las últimas noticias y ofertas exclusivas
+          </p>
+          <div class="newsletter-form">
+            <input type="email" placeholder="@algo.com" />
+            <button>suscribir</button>
+          </div>
+          <ul style="margin-top: 20px">
+            <li><a href="#">Quienes somos</a></li>
+            <li><a href="#">Historia de la empresa</a></li>
+            <li><a href="#">Misión y visión</a></li>
+            <li><a href="#">Contacto</a></li>
+            <li><a href="#">Trabaja con nosotros</a></li>
+            <li><a href="#">Legal</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <div>© 2025 Game Time. Todos los derechos reservados</div>
+        <div class="footer-legal">
+          <a href="#">Política de privacidad</a>
+          <a href="#">Términos de uso</a>
+          <a href="#">Cookies</a>
+        </div>
+      </div>
+    </footer>
 
     <script src="js/menu.js"></script>
     <script src="js/compartir.js"></script>
