--- a/Entrega2/login.html
+++ b/Entrega2/login.html
@@ -9,6 +9,9 @@
 <body>
     <div class="login-container">
         <div class="login-box">
+            <div class="bouncing-loader" id="spinner">
+                <div></div><div></div><div></div>
+            </div>
             <img src="assets/images/imageform.png" alt="GameTime Logo" class="image-box">
             <h2>Entra a GameTime</h2>
             <p>Con tu usuario y contraseña</p>
@@ -19,7 +22,7 @@
                 <div class="textbox">
                     <input type="password" placeholder="Contraseña" name="contraseña" required>
                 </div>
-                <a href="index.html"><input type="button" value="Iniciar sesión" class="btn"></a>
+                <input type="button" value="Iniciar sesión" class="btn" id="loginBtn">
             </form>
             <div class="social-buttons">
                 <button class="btn google"><i class="fa-brands fa-google"></i></button>
@@ -29,5 +32,8 @@
         </div>
     </div>
     <script src="https://kit.fontawesome.com/c59d1be4df.js" crossorigin="anonymous"></script>
+
+    <script src="js/login.js"></script>
+
 </body>
 </html>
