agrego animacion de carga y barra de carga

--- a/Entrega2/index.html
+++ b/Entrega2/index.html
@@ -44,9 +44,15 @@
           <i class="fa-solid fa-magnifying-glass search-icon"></i>
         </button>
       </div>
+
       <div class="div-user" id="toggleUser">
         <i class="fa-solid fa-user-astronaut open-user"></i>
       </div>
+      <div class="div-carrito" id="toggleCarrito">
+        <i class="fa-solid fa-cart-shopping"></i>
+        <span class="cart-count" id="cartCount">0</span>
+      </div>
+
       <div class="menu-usuario" id="navUser">
         <ul class="nav-list">
           <li><a href="">Home</a></li>
