--- a/Entrega2/login.html
+++ b/Entrega2/login.html
@@ -12,6 +12,10 @@
             <div class="bouncing-loader" id="spinner">
                 <div></div><div></div><div></div>
             </div>
+            <div class="progress-bar-container" id="progressBarContainer" >
+                <div class="progress-bar" id="progressBar"></div>
+                <span class="progress-percent" id="progressPercent">0%</span>
+            </div>
             <img src="assets/images/imageform.png" alt="GameTime Logo" class="image-box">
             <h2>Entra a GameTime</h2>
             <p>Con tu usuario y contraseña</p>
