--- a/Entrega2/index.html
+++ b/Entrega2/index.html
@@ -45,12 +45,14 @@
         </button>
       </div>
 
-      <div class="div-user" id="toggleUser">
-        <i class="fa-solid fa-user-astronaut open-user"></i>
-      </div>
-      <div class="div-carrito" id="toggleCarrito">
-        <i class="fa-solid fa-cart-shopping"></i>
-        <span class="cart-count" id="cartCount">0</span>
+      <div class="nav-icons">
+        <div class="div-carrito" id="toggleCarrito">
+          <i class="fa-solid fa-cart-shopping"></i>
+          <span class="cart-count" id="cartCount">0</span>
+        </div>
+        <div class="div-user" id="toggleUser">
+          <i class="fa-solid fa-user-astronaut open-user"></i>
+        </div>
       </div>
 
       <div class="menu-usuario" id="navUser">
