cambio nav en 4 en linea

--- a/Entrega2/4enlinea.html
+++ b/Entrega2/4enlinea.html
@@ -7,39 +7,55 @@
     <title>4 en linea</title>
 </head>
 <body>
-    <nav class="navbar">
-        <button class="open-menu" id="openBurger"><i class="fa-solid fa-bars open-icon"></i></button>
-        <div class="burger-menu" id="navBurger">
-          <button class="close-menu" id="closeBurger"><i class="fa-solid fa-xmark close-icon"></i></button>  
-          <ul class="nav-list">
-            <li><a href="#">Accion</a></li>
-            <li><a href="#">Juegos de chicas</a></li>
-            <li><a href="#">Deportes</a></li>
-            <li><a href="#">Casual</a></li>
-            <li><a href="#">Estrategia</a></li>
-            <li><a href="#">Juegos de mesa</a></li>
-            <li><a href="#">Multiplayer</a></li>
-          </ul>
+   <nav class="navbar">
+      <button class="open-menu" id="openBurger">
+        <i class="fa-solid fa-bars open-icon"></i>
+      </button>
+      <div class="burger-menu" id="navBurger">
+        <button class="close-menu" id="closeBurger">
+          <i class="fa-solid fa-xmark close-icon"></i>
+        </button>
+        <ul class="nav-list">
+          <li><a href="#">Accion</a></li>
+          <li><a href="#">Juegos de chicas</a></li>
+          <li><a href="#">Deportes</a></li>
+          <li><a href="#">Casual</a></li>
+          <li><a href="#">Estrategia</a></li>
+          <li><a href="#">Juegos de mesa</a></li>
+          <li><a href="#">Multiplayer</a></li>
+        </ul>
+      </div>
+      <a href="index.html">
+        <div class="logo">
+          <img src="assets/images/LogoGametime.png" alt="Logo" />
         </div>
-        <a href="index.html">
-            <div class="logo">
-                <img src="assets/images/LogoGametime.png" alt="Logo">
-            </div>
-        </a>
-        <div class="search-container">
-          <input type="text" placeholder="¿A qué jugamos hoy?">
-          <button><i class="fa-solid fa-magnifying-glass search-icon"></i></button>
+      </a>
+      <div class="search-container">
+        <input type="text" placeholder="¿A qué jugamos hoy?" />
+        <button>
+          <i class="fa-solid fa-magnifying-glass search-icon"></i>
+        </button>
+      </div>
+
+      <div class="nav-icons">
+        <div class="div-carrito" id="toggleCarrito">
+          <i class="fa-solid fa-cart-shopping"></i>
+          <span class="cart-count" id="cartCount">0</span>
         </div>
-        <div class="div-user" id="toggleUser"><i class="fa-solid fa-user-astronaut open-user"></i></div>
-        <div class="menu-usuario" id="navUser">
-            <ul class="nav-list">
-                <li><a href="">Home</a></li>
-                <li><a href="">Mi perfil</a></li>
-                <li><a href="">Mis juegos</a></li>
-                <li><a href="">Logros</a></li>
-                <li><a href="login.html">Cerrar sesion</a></li>
-            </ul>
+        <div class="div-user" id="toggleUser">
+          <i class="fa-solid fa-user-astronaut open-user"></i>
         </div>
+      </div>
+
+      <div class="menu-usuario" id="navUser">
+        <ul class="nav-list">
+          <li><a href="">Home</a></li>
+          <li><a href="">Mi perfil</a></li>
+          <li><a href="">Mis juegos</a></li>
+          <li><a href="">Logros</a></li>
+          <li><a href="login.html">Cerrar sesion</a></li>
+        </ul>
+      </div>
     </nav>
     <div class="cont-all">
         <div class="cont-texto-4enlinea">
