--- a/Entrega2/index.html
+++ b/Entrega2/index.html
@@ -110,8 +110,8 @@
                   alt="New Super Mario Bros"
                   class="game-image"
                 />
+                <div class="card-title">Super Mario Bross</div>
                 <div class="hover-overlay">
-                  <h2>Super Mario Bross</h2>
                   <button class="play-button"><span>BUY NOW</span></button>
                   <div class="cart-price-section">
                     <div class="cart-icon">
@@ -132,8 +132,9 @@
                 <div class="price-tag">
                   <img src="assets/iconos/Cardtag.svg" alt="" /><span>$12</span>
                 </div>
+                <h2 class="card-title">Agar.io</h2>
+
                 <div class="hover-overlay">
-                  <h2>Agar.io</h2>
                   <button class="play-button"><span>BUY NOW</span></button>
                   <div class="cart-price-section">
                     <div class="cart-icon">
@@ -151,8 +152,8 @@
                   alt="New Super Mario Bros"
                   class="game-image"
                 />
+                <div class="card-title">Lavaboy and Watergirl</div>
                 <div class="hover-overlay">
-                  <h2>Lavaboy and Watergirl</h2>
                   <button class="play-button"><span>PLAY NOW</span></button>
                 </div>
               </div>
@@ -167,8 +168,8 @@
                 <div class="price-tag">
                   <img src="assets/iconos/Cardtag.svg" alt="" /><span>$12</span>
                 </div>
+                <div class="card-title">Need for speed</div>
                 <div class="hover-overlay">
-                  <h2>Need for speed</h2>
                   <button class="play-button"><span>BUY NOW</span></button>
                   <div class="cart-price-section">
                     <div class="cart-icon">
@@ -186,8 +187,8 @@
                   alt="New Super Mario Bros"
                   class="game-image"
                 />
+                <div class="card-title">Pool</div>
                 <div class="hover-overlay">
-                  <h2>Pool</h2>
                   <button class="play-button"><span>PLAY NOW</span></button>
                 </div>
               </div>
@@ -202,8 +203,8 @@
                 <div class="price-tag">
                   <img src="assets/iconos/Cardtag.svg" alt="" /><span>$12</span>
                 </div>
+                <div class="card-title">Truco</div>
                 <div class="hover-overlay">
-                  <h2>Truco</h2>
                   <button class="play-button"><span>BUY NOW</span></button>
                   <div class="cart-icon">
                     <i class="fa-solid fa-cart-plus addCart"></i>
@@ -219,8 +220,8 @@
                   alt="New Super Mario Bros"
                   class="game-image"
                 />
+                <div class="card-title">Uno</div>
                 <div class="hover-overlay">
-                  <h2>Uno</h2>
                   <button class="play-button"><span>PLAY NOW</span></button>
                 </div>
               </div>
@@ -235,8 +236,8 @@
                 <div class="price-tag">
                   <img src="assets/iconos/Cardtag.svg" alt="" /><span>$12</span>
                 </div>
+                <div class="card-title">Preguntados</div>
                 <div class="hover-overlay">
-                  <h2>Preguntados</h2>
                   <button class="play-button"><span>BUY NOW</span></button>
                   <div class="cart-icon">
                     <i class="fa-solid fa-cart-plus addCart"></i>
@@ -252,8 +253,8 @@
                   alt="New Super Mario Bros"
                   class="game-image"
                 />
+                <div class="card-title">Poker</div>
                 <div class="hover-overlay">
-                  <h2>Poker</h2>
                   <button class="play-button"><span>PLAY NOW</span></button>
                 </div>
               </div>
@@ -317,8 +318,8 @@
                 <div class="price-tag">
                   <img src="assets/iconos/Cardtag.svg" alt="" /><span>$9</span>
                 </div>
+                <div class="card-title">Monopoly</div>
                 <div class="hover-overlay">
-                  <h2>Monopoly</h2>
                   <button class="play-button"><span>BUY NOW</span></button>
                   <div class="cart-price-section">
                     <div class="cart-icon">
@@ -336,8 +337,8 @@
                   alt="New Super Mario Bros"
                   class="game-image"
                 />
+                <div class="card-title">4 en linea mario vs bowser</div>
                 <div class="hover-overlay">
-                  <h2>4 en linea mario vs bowser</h2>
                   <a href="4enlinea.html"
                     ><button class="play-button">
                       <span>PLAY NOW</span>
@@ -356,8 +357,8 @@
                 <div class="price-tag">
                   <img src="assets/iconos/Cardtag.svg" alt="" /><span>$6</span>
                 </div>
+                <div class="card-title">Arkadium boobleshooter</div>
                 <div class="hover-overlay">
-                  <h2>Arkadium boobleshooter</h2>
                   <button class="play-button"><span>BUY NOW</span></button>
                   <div class="cart-price-section">
                     <div class="cart-icon">
@@ -370,8 +371,9 @@
             </div>
             <div class="slick">
               <div class="game-card">
+                <h2>Agar.io</h2>
                 <img
-                  src="assets/images/tabletopia.png"
+                  src="assets/images/Agario.png"
                   alt="New Super Mario Bros"
                   class="game-image"
                 />
@@ -379,7 +381,6 @@
                   <img src="assets/iconos/Cardtag.svg" alt="" /><span>$12</span>
                 </div>
                 <div class="hover-overlay">
-                  <h2>Tabletopia</h2>
                   <button class="play-button"><span>BUY NOW</span></button>
                   <div class="cart-price-section">
                     <div class="cart-icon">
@@ -397,8 +398,8 @@
                   alt="New Super Mario Bros"
                   class="game-image"
                 />
+                <div class="card-title">Kuya island</div>
                 <div class="hover-overlay">
-                  <h2>Kuya island</h2>
                   <button class="play-button"><span>PLAY NOW</span></button>
                 </div>
               </div>
@@ -410,8 +411,8 @@
                   alt="New Super Mario Bros"
                   class="game-image"
                 />
+                <div class="card-title">Ludo rivals</div>
                 <div class="hover-overlay">
-                  <h2>Ludo rivals</h2>
                   <button class="play-button"><span>PLAY NOW</span></button>
                 </div>
               </div>
@@ -423,8 +424,8 @@
                   alt="New Super Mario Bros"
                   class="game-image"
                 />
+                <div class="card-title">Pinball arcade</div>
                 <div class="hover-overlay">
-                  <h2>Pinball arcade</h2>
                   <button class="play-button"><span>PLAY NOW</span></button>
                 </div>
               </div>
@@ -436,8 +437,8 @@
                   alt="New Super Mario Bros"
                   class="game-image"
                 />
+                <div class="card-title">Plants vs zombies 3</div>
                 <div class="hover-overlay">
-                  <h2>Plants vs zombies 3</h2>
                   <button class="play-button"><span>PLAY NOW</span></button>
                 </div>
               </div>
@@ -449,8 +450,8 @@
                   alt="New Super Mario Bros"
                   class="game-image"
                 />
+                <div class="card-title">Sonic the hedgehog</div>
                 <div class="hover-overlay">
-                  <h2>Sonic the hedgehog</h2>
                   <button class="play-button"><span>PLAY NOW</span></button>
                 </div>
               </div>
@@ -514,8 +515,8 @@
                 <div class="price-tag">
                   <img src="assets/iconos/Cardtag.svg" alt="" /><span>$12</span>
                 </div>
+                <div class="card-title">Fashion holic</div>
                 <div class="hover-overlay">
-                  <h2>Fashion holic</h2>
                   <button class="play-button"><span>BUY NOW</span></button>
                   <div class="cart-price-section">
                     <div class="cart-icon">
@@ -536,8 +537,8 @@
                 <div class="price-tag">
                   <img src="assets/iconos/Cardtag.svg" alt="" /><span>$12</span>
                 </div>
+                <div class="card-title">Princesa boda primaveral</div>
                 <div class="hover-overlay">
-                  <h2>Princesa boda primaveral</h2>
                   <button class="play-button"><span>PLAY NOW</span></button>
                 </div>
               </div>
@@ -549,8 +550,8 @@
                   alt="New Super Mario Bros"
                   class="game-image"
                 />
+                <div class="card-title">Cake baker</div>
                 <div class="hover-overlay">
-                  <h2>Cake baker</h2>
                   <button class="play-button"><span>PLAY NOW</span></button>
                 </div>
               </div>
@@ -565,9 +566,9 @@
                 <div class="price-tag">
                   <img src="assets/iconos/Cardtag.svg" alt="" /><span>$12</span>
                 </div>
-                <div class="hover-overlay">
-                  <h2>Nails decorator</h2>
+                <div class="card-title">Nails decorator</div>
 
+                <div class="hover-overlay">
                   <button class="play-button"><span>BUY NOW</span></button>
                   <div class="cart-icon">
                     <i class="fa-solid fa-cart-plus addCart"></i>
@@ -583,8 +584,8 @@
                   alt="New Super Mario Bros"
                   class="game-image"
                 />
+                <div class="card-title">Queen clothing</div>
                 <div class="hover-overlay">
-                  <h2>Queen clothing</h2>
                   <button class="play-button"><span>PLAY NOW</span></button>
                 </div>
               </div>
@@ -599,8 +600,8 @@
                 <div class="price-tag">
                   <img src="assets/iconos/Cardtag.svg" alt="" /><span>$12</span>
                 </div>
+                <div class="card-title">Cenicienta</div>
                 <div class="hover-overlay">
-                  <h2>Cenicienta</h2>
                   <button class="play-button"><span>BUY NOW</span></button>
                   <div class="cart-icon">
                     <i class="fa-solid fa-cart-plus addCart"></i>
@@ -616,8 +617,8 @@
                   alt="New Super Mario Bros"
                   class="game-image"
                 />
+                <div class="card-title">School teacher</div>
                 <div class="hover-overlay">
-                  <h2>School teacher</h2>
                   <button class="play-button"><span>PLAY NOW</span></button>
                 </div>
               </div>
@@ -632,8 +633,8 @@
                 <div class="price-tag">
                   <img src="assets/iconos/Cardtag.svg" alt="" /><span>$12</span>
                 </div>
+                <div class="card-title">Flower detective</div>
                 <div class="hover-overlay">
-                  <h2>Flower detective</h2>
                   <button class="play-button"><span>BUY NOW</span></button>
                   <div class="cart-icon">
                     <i class="fa-solid fa-cart-plus addCart"></i>
@@ -649,8 +650,8 @@
                   alt="New Super Mario Bros"
                   class="game-image"
                 />
+                <div class="card-title">Sonic the hedgehog</div>
                 <div class="hover-overlay">
-                  <h2>Sonic the hedgehog</h2>
                   <button class="play-button"><span>PLAY NOW</span></button>
                 </div>
               </div>
@@ -714,8 +715,8 @@
                 <div class="price-tag">
                   <img src="assets/iconos/Cardtag.svg" alt="" /><span>$12</span>
                 </div>
+                <div class="card-title">Archery Master</div>
                 <div class="hover-overlay">
-                  <h2>Archery Master</h2>
                   <button class="play-button"><span>BUY NOW</span></button>
                   <div class="cart-price-section">
                     <div class="cart-icon">
@@ -736,8 +737,8 @@
                 <div class="price-tag">
                   <img src="assets/iconos/Cardtag.svg" alt="" /><span>$12</span>
                 </div>
+                <div class="card-title">Basket bros</div>
                 <div class="hover-overlay">
-                  <h2>Basket bros</h2>
                   <button class="play-button"><span>PLAY NOW</span></button>
                 </div>
               </div>
@@ -749,8 +750,8 @@
                   alt="New Super Mario Bros"
                   class="game-image"
                 />
+                <div class="card-title">FC2024</div>
                 <div class="hover-overlay">
-                  <h2>FC2024</h2>
                   <button class="play-button"><span>PLAY NOW</span></button>
                 </div>
               </div>
@@ -765,9 +766,9 @@
                 <div class="price-tag">
                   <img src="assets/iconos/Cardtag.svg" alt="" /><span>$12</span>
                 </div>
-                <div class="hover-overlay">
-                  <h2>Base jump</h2>
+                <div class="card-title">Base jump</div>
 
+                <div class="hover-overlay">
                   <button class="play-button"><span>BUY NOW</span></button>
                   <div class="cart-icon">
                     <i class="fa-solid fa-cart-plus addCart"></i>
@@ -783,8 +784,8 @@
                   alt="New Super Mario Bros"
                   class="game-image"
                 />
+                <div class="card-title">Boxing stars</div>
                 <div class="hover-overlay">
-                  <h2>Boxing stars</h2>
                   <button class="play-button"><span>PLAY NOW</span></button>
                 </div>
               </div>
@@ -799,8 +800,8 @@
                 <div class="price-tag">
                   <img src="assets/iconos/Cardtag.svg" alt="" /><span>$12</span>
                 </div>
+                <div class="card-title">3d Bowling</div>
                 <div class="hover-overlay">
-                  <h2>3d Bowling</h2>
                   <button class="play-button"><span>BUY NOW</span></button>
                   <div class="cart-icon">
                     <i class="fa-solid fa-cart-plus addCart"></i>
@@ -816,8 +817,8 @@
                   alt="New Super Mario Bros"
                   class="game-image"
                 />
+                <div class="card-title">Penalty shooters</div>
                 <div class="hover-overlay">
-                  <h2>Penalty shooters</h2>
                   <button class="play-button"><span>PLAY NOW</span></button>
                 </div>
               </div>
@@ -832,8 +833,8 @@
                 <div class="price-tag">
                   <img src="assets/iconos/Cardtag.svg" alt="" /><span>$12</span>
                 </div>
+                <div class="card-title">Real Fishing</div>
                 <div class="hover-overlay">
-                  <h2>Real Fishing</h2>
                   <button class="play-button"><span>BUY NOW</span></button>
                   <div class="cart-icon">
                     <i class="fa-solid fa-cart-plus addCart"></i>
@@ -849,8 +850,8 @@
                   alt="New Super Mario Bros"
                   class="game-image"
                 />
+                <div class="card-title">Cricket Superstars</div>
                 <div class="hover-overlay">
-                  <h2>Cricket Superstars</h2>
                   <button class="play-button"><span>PLAY NOW</span></button>
                 </div>
               </div>
