--- a/Entrega2/index.html
+++ b/Entrega2/index.html
@@ -333,13 +333,13 @@
             <div class="slick">
               <div class="game-card">
                 <img
-                  src="assets/images/4enlineamariovsbowser.png"
-                  alt="New Super Mario Bros"
+                  src="assets/images/fondoPegSolitaire.png"
+                  alt="Peg Solitaire"
                   class="game-image"
                 />
-                <div class="card-title">4 en linea mario vs bowser</div>
+                <div class="card-title">Peg Solitaire</div>
                 <div class="hover-overlay">
-                  <a href="4enlinea.html"
+                  <a href="pegSolitaire.html"
                     ><button class="play-button">
                       <span>PLAY NOW</span>
                     </button></a
@@ -957,6 +957,9 @@
             <li><a href="#">foro de comunidades</a></li>
             <li><a href="#">eventos y torneos</a></li>
             <li><a href="#">productos y servicios</a></li>
+            <li><a href="#">Guía de usuario</a></li>
+            <li><a href="#">Soporte técnico</a></li>
+            <li><a href="#">Blog de comunidad</a></li>
           </ul>
         </div>
 
@@ -968,6 +971,9 @@
             <li><a href="#">Actualizaciones y parches</a></li>
             <li><a href="#">Descargas de juegos Mapa del sitio</a></li>
             <li><a href="#">Ayuda en línea</a></li>
+            <li><a href="#">Promociones</a></li>
+            <li><a href="#">Novedades</a></li>
+            <li><a href="#">Tutoriales</a></li>
           </ul>
         </div>
 
@@ -987,6 +993,9 @@
             <li><a href="#">Contacto</a></li>
             <li><a href="#">Trabaja con nosotros</a></li>
             <li><a href="#">Legal</a></li>
+            <li><a href="#">Prensa</a></li>
+            <li><a href="#">Inversionistas</a></li>
+            <li><a href="#">Blog oficial</a></li>
           </ul>
         </div>
       </div>
