--- a/Entrega2/index.html
+++ b/Entrega2/index.html
@@ -57,12 +57,20 @@
 
       <div class="menu-usuario" id="navUser">
         <ul class="nav-list">
-          <li><a href="">Home</a></li>
           <li><a href="">Mi perfil</a></li>
           <li><a href="">Mis juegos</a></li>
           <li><a href="">Logros</a></li>
           <li><a href="login.html">Cerrar sesion</a></li>
         </ul>
+      </div>
+
+      <div class="lista-carrito" id="lista-carrito">
+        <h3>Carrito de compras</h3>
+        <div class="cart-items" id="cartItems"></div>
+        <div class="cart-total">
+          <span>Total:</span>
+          <span id="cartTotalAmount">$0</span>
+        </div>
       </div>
     </nav>
     <!--Nav-->
