agrgo spinner al home

--- a/Entrega2/pegSolitaire.html
+++ b/Entrega2/pegSolitaire.html
@@ -58,7 +58,7 @@
       </div>
     </nav>
     <div class="cont-all">
-      <div class="cont-texto-4enlinea">
+      <div class="cont-texto-pegSolitaire">
         <img
           src="assets/images/Captura de pantalla 2025-09-15 140458.png"
           alt=""
@@ -79,7 +79,7 @@
       </div>
       <div class="container-juego">
         <div class="publicidad"></div>
-        <div class="cont-4enlinea">
+        <div class="cont-pegSolitaire">
           <img
             src="assets/images/fondoPegSolitaire.png"
             alt=""
@@ -179,6 +179,7 @@
       </div>
 
       <div class="comment-section">
+        <h3 style="border-bottom: 2px solid #ffffff">Comentarios</h3>
         <div class="comment-box">
           <div class="user-info">
             <span class="user-icon"
