--- a/Entrega2/index.html
+++ b/Entrega2/index.html
@@ -14,6 +14,18 @@
     <title>GameTime</title>
   </head>
   <body>
+    <div id="loader">
+      <div class="bouncing-loader">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <div class="progress-bar-container">
+        <div class="progress-bar"></div>
+        <span class="progress-percent">0%</span>
+      </div>
+    </div>
+
     <!--Nav-->
     <nav class="navbar">
       <button class="open-menu" id="openBurger">
@@ -1021,6 +1033,8 @@
     <script src="js/cartbrn.js"></script>
     <script src="js/carruseles.js"></script>
     <script src="js/menu.js"></script>
+    <script src="js/index-spinner.js"></script>
+
     <script
       src="https://kit.fontawesome.com/c59d1be4df.js"
       crossorigin="anonymous"
