--- a/Entrega2/registrar.html
+++ b/Entrega2/registrar.html
@@ -19,7 +19,13 @@
         <form>
           <div class="textbox">
             <label for="nombre">Nombre</label>
-            <input type="text" placeholder="Nombre" name="nombre" id="nombre" required />
+            <input
+              type="text"
+              placeholder="Nombre"
+              name="nombre"
+              id="nombre"
+              required
+            />
           </div>
           <div class="textbox">
             <label for="apellido">Apellido</label>
@@ -33,11 +39,23 @@
           </div>
           <div class="textbox">
             <label for="edad">Edad</label>
-            <input type="text" placeholder="Edad" name="Edad" id="edad" required />
+            <input
+              type="text"
+              placeholder="Edad"
+              name="Edad"
+              id="edad"
+              required
+            />
           </div>
           <div class="textbox">
             <label for="email">Email</label>
-            <input type="email" placeholder="Email" name="Email" id="email" required />
+            <input
+              type="email"
+              placeholder="Email"
+              name="Email"
+              id="email"
+              required
+            />
           </div>
           <div class="textbox">
             <label for="nickname">Nickname</label>
@@ -70,12 +88,16 @@
             />
           </div>
           <img src="assets/images/captcha.png" class="captcha" />
-          <input
-            type="button"
-            value="Registrarse"
-            class="btn"
-            id="btnRegistro"
-          />
+          <a href="/Entrega2/index.html">
+            <input
+              style="margin-bottom: 10px"
+              type="button"
+              value="Registrarse"
+              class="btn"
+              id="btnRegistro"
+            />
+          </a>
+
           <p>Ya tienes cuenta?<a href="login.html"> Iniciar Sesion</a></p>
         </form>
       </div>
