acomodo menu hamb

--- a/Entrega2/index.html
+++ b/Entrega2/index.html
@@ -36,13 +36,29 @@
           <i class="fa-solid fa-xmark close-icon"></i>
         </button>
         <ul class="nav-list">
-          <li><a href="#">Accion</a></li>
-          <li><a href="#">Juegos de chicas</a></li>
-          <li><a href="#">Deportes</a></li>
-          <li><a href="#">Casual</a></li>
-          <li><a href="#">Estrategia</a></li>
-          <li><a href="#">Juegos de mesa</a></li>
-          <li><a href="#">Multiplayer</a></li>
+          <li>
+            <a href="#"><i class="fa-solid fa-gun"></i> Acción</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-solid fa-heart"></i> Juegos de chicas</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-solid fa-futbol"></i> Deportes</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-solid fa-dice"></i> Casual</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-solid fa-chess"></i> Estrategia</a>
+          </li>
+          <li>
+            <a href="#"
+              ><i class="fa-solid fa-table-cells"></i> Juegos de mesa</a
+            >
+          </li>
+          <li>
+            <a href="#"><i class="fa-solid fa-users"></i> Multiplayer</a>
+          </li>
         </ul>
       </div>
       <a href="index.html">
