Refactorizo pagina de PegSolitaire

--- a/Entrega2/pegSolitaire.html
+++ b/Entrega2/pegSolitaire.html
@@ -80,11 +80,8 @@
       <div class="container-juego">
         <div class="publicidad"></div>
         <div class="cont-pegSolitaire">
-          <img
-            src="assets/images/fondoPegSolitaire.png"
-            alt=""
-            class="juego-image"
-          />
+           <img src="assets/images/Captura de pantalla 2025-09-15 140458.png" alt="" class="juego-image-overlay" />
+           <img src="assets/images/fondoPegSolitaire.png" alt="" class="juego-image" />
         </div>
         <div class="publicidad"></div>
       </div>
@@ -156,22 +153,22 @@
         </div>
         <div class="gameplays-img">
           <img
-            src="assets/images/gameplay1.jpg"
+            src="assets/images/gameplay2.png"
             class="gameplay-image"
             alt=""
           />
           <img
-            src="assets/images/gameplay2.jpg"
+            src="assets/images/gameplay.png"
             class="gameplay-image"
             alt=""
           />
           <img
-            src="assets/images/gameplay3.jpg"
+            src="assets/images/gameplay2.png"
             class="gameplay-image"
             alt=""
           />
           <img
-            src="assets/images/gameplay4.jpg"
+            src="assets/images/fondoPegSolitaire.png"
             class="gameplay-image"
             alt=""
           />
