agrego hover al boton de compartir

--- a/Entrega2/pegSolitaire.html
+++ b/Entrega2/pegSolitaire.html
@@ -80,12 +80,23 @@
       <div class="container-juego">
         <div class="publicidad"></div>
         <div class="cont-pegSolitaire">
-           <img src="assets/images/Captura de pantalla 2025-09-15 140458.png" alt="" class="juego-image-overlay" />
-           <img src="assets/images/fondoPegSolitaire.png" alt="" class="juego-image" />
+          <img
+            src="assets/images/Captura de pantalla 2025-09-15 140458.png"
+            alt=""
+            class="juego-image-overlay"
+          />
+          <img
+            src="assets/images/fondoPegSolitaire.png"
+            alt=""
+            class="juego-image"
+          />
         </div>
         <div class="publicidad"></div>
       </div>
-      <button class="open-compartir-btn" id="openCompartir">Compartir</button>
+      <button class="open-compartir-btn" id="openCompartir">
+        <span class="btn-text">Compartir</span>
+        <i class="fa-solid fa-share-nodes btn-icon"></i>
+      </button>
       <div class="cont-compartir" id="Cont-Compartir">
         <div class="info-compartir" id="info-compartir">
           <button
@@ -157,11 +168,7 @@
             class="gameplay-image"
             alt=""
           />
-          <img
-            src="assets/images/gameplay.png"
-            class="gameplay-image"
-            alt=""
-          />
+          <img src="assets/images/gameplay.png" class="gameplay-image" alt="" />
           <img
             src="assets/images/gameplay2.png"
             class="gameplay-image"
