ya funcionan los clicks

--- a/Entrega3/blocka.html
+++ b/Entrega3/blocka.html
@@ -77,13 +77,10 @@
           </ul>
         </div>
       </div>
-      <div class="container-juego">
-        <div class="publicidad"></div>
-        <div class="cont-pegSolitaire">
-          <canvas id="blocka-canvas" height="620"width="880"></canvas>
-        </div>
-        <div class="publicidad"></div>
-      </div>
+
+      <canvas id="blocka-canvas" width="1280" height="720"></canvas>
+
+      
       <button class="open-compartir-btn" id="openCompartir">
         <span class="btn-text">Compartir</span>
         <i class="fa-solid fa-share-nodes btn-icon"></i>
