creo clases necesarias

--- a/Entrega4/pegSolitaire.html
+++ b/Entrega4/pegSolitaire.html
@@ -77,22 +77,9 @@
           </ul>
         </div>
       </div>
-      <div class="container-juego">
-        <div class="publicidad"></div>
-        <div class="cont-pegSolitaire">
-          <img
-            src="assets/images/Captura de pantalla 2025-09-15 140458.png"
-            alt=""
-            class="juego-image-overlay"
-          />
-          <img
-            src="assets/images/fondoPegSolitaire.png"
-            alt=""
-            class="juego-image"
-          />
-        </div>
-        <div class="publicidad"></div>
-      </div>
+
+      <canvas id="canvas" width="1280" height="720"></canvas>
+
       <button class="open-compartir-btn" id="openCompartir">
         <span class="btn-text">Compartir</span>
         <i class="fa-solid fa-share-nodes btn-icon"></i>
@@ -398,5 +385,10 @@
       src="https://kit.fontawesome.com/c59d1be4df.js"
       crossorigin="anonymous"
     ></script>
+    <script src="js/game.js"></script>
+    <script src="js/casilla.js"></script>
+    <script src="js/pieza.js"></script>
+    <script src="js/tablero.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
